ext.junitJupiterVersion  = '5.0.0-M4'


apply plugin: 'java'
apply plugin: 'jacoco'

sourceCompatibility = 1.9
version = '1.0-SNAPSHOT'

compileTestJava {
    sourceCompatibility = 1.9
    targetCompatibility = 1.9
    options.compilerArgs += '-parameters'
}

repositories {
    if (project.hasProperty("local_repository") || System.getProperty("local_repository") != null) {
        mavenLocal()
    } else {
        mavenCentral()
    }
}

dependencies {
    testCompile project(':client')
    testCompile project(':server')
    testCompile group: 'com.sparkjava', name: 'spark-core', version: '2.9.2'
    testCompile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.2'
    testCompile group: 'net.sourceforge.htmlunit', name: 'htmlunit', version: '2.44.0'

    testImplementation group: 'com.h2database', name: 'h2', version: '1.4.200'
    testImplementation group: 'org.hsqldb', name: 'hsqldb', version: '2.5.1'
    testImplementation group: 'org.apache.derby', name: 'derby', version: '10.15.2.0'
    testImplementation group: 'org.postgresql', name: 'postgresql', version: '42.2.16'
    testImplementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.21'


    testCompile group: 'org.mockito', name: 'mockito-core', version: '3.0.0'
    testImplementation 'org.awaitility:awaitility:4.0.1'
    
    testCompileOnly(
            'junit:junit:4.12'
    )
    testImplementation(
            'org.junit.jupiter:junit-jupiter-api:5.1.0'
    )
    testCompile("org.junit.jupiter:junit-jupiter-params:5.3.2")
    testRuntimeOnly(
            'org.junit.jupiter:junit-jupiter-engine:5.1.0',
            'org.junit.vintage:junit-vintage-engine:5.1.0'
    )
}


test {
    testLogging {
        events 'PASSED', 'FAILED', 'SKIPPED'
    }
    filter {
        includeTestsMatching "com.nosqldriver.jdbc.http.StatementControllerExecuteQueryTest"
    }
    useJUnitPlatform()
}

